@@ -131,9 +131,11 @@ finalization.
 <tr>
 <td valign="baseline" colspan="1" align="left"></td><td valign="baseline" colspan="1" align="left"> <code>(:estimated-instances</code> <var>integer</var><code>)</code> |</td></tr>
 <tr>
+<td valign="baseline" colspan="1" align="left"></td><td valign="baseline" colspan="1" align="left"> <code>(:export-accessors</code> <var>boolean</var><code>)</code> |</td></tr>
+<tr>
 <td valign="baseline" colspan="1" align="left"></td><td valign="baseline" colspan="1" align="left"> <code>(:export-class-name</code> <var>boolean</var><code>)</code> |</td></tr>
 <tr>
-<td valign="baseline" colspan="1" align="left"></td><td valign="baseline" colspan="1" align="left"> <code>(:export-accessors</code> <var>boolean</var><code>)</code> |</td></tr>
+<td valign="baseline" colspan="1" align="left"></td><td valign="baseline" colspan="1" align="left"> <code>(:export-slot-names</code> <var>direct-slots-specifier</var><code>)</code> |</td></tr>
 <tr>
 <td valign="baseline" colspan="1" align="left"></td><td valign="baseline" colspan="1" align="left"> <code>(:generate-accessors</code> <var>direct-slots-specifier</var><code>)</code> |</td></tr>
 <tr>
