@@ -48,6 +48,6 @@
 <li><a href="ref-index.html">Index</a></li>
 </ul>
 <hr /><address><a target="_top" class="address"
-    href="http://GBBopen.org/"><p>The GBBopen Project</a>,<nobr>&nbsp;February 22, 2009</nobr>
-<nobr>16:56&nbsp;EST</nobr></address><br />
+    href="http://GBBopen.org/"><p>The GBBopen Project</a>,<nobr>&nbsp;February 23, 2009</nobr>
+<nobr>4:21&nbsp;EST</nobr></address><br />
 </body></html>
